--- a/php/Dockerfile-linux.template
+++ b/php/Dockerfile-linux.template
@@ -327,7 +327,11 @@ RUN set -eux; \
 	export \
 		CFLAGS="$PHP_CFLAGS" \
 		CPPFLAGS="$PHP_CPPFLAGS" \
+{{ if is_alpine then ( -}}
+		LDFLAGS="$PHP_LDFLAGS -lucontext" \
+{{ ) else ( -}}
 		LDFLAGS="$PHP_LDFLAGS" \
+{{ ) end -}}
 # https://github.com/php/php-src/blob/d6299206dd828382753453befd1b915491b741c6/configure.ac#L1496-L1511
 		PHP_BUILD_PROVIDER='https://github.com/docker-library/php' \
 		PHP_UNAME='Linux - Docker' \
