build(mariadb): 更新模板

--- a/mariadb/Dockerfile.template
+++ b/mariadb/Dockerfile.template
@@ -87,7 +87,7 @@ RUN set -ex; \
 	export PYTHONDONTWRITEBYTECODE=1; \
 	\
 	dpkgArch="$(dpkg --print-architecture)"; \
-	aptRepo="[ signed-by=/etc/apt/trusted.gpg.d/mariadb.gpg ] http://archive.mariadb.org/mariadb-%%MARIADB_VERSION_BASIC%%/repo/debian/ %%SUITE%% main main/debug"; \
+	aptRepo="[ signed-by=/etc/apt/trusted.gpg.d/mariadb.gpg ] http://archive.mariadb.org/mariadb-%%MARIADB_VERSION_BASIC%%/repo/debian/ %%SUITE%% main"; \
 	case "$dpkgArch" in \
 		amd64 | arm64 | ppc64el | s390x) \
 # arches officialy built by upstream
