feat: 更新 buildpack-deps 构建

--- a/.github/workflows/buildpack-deps.yml
+++ b/.github/workflows/buildpack-deps.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         name: [buildpack-deps]
         os: [debian]
-        suite: [forky]
+        suite: [trixie, forky]
 
     steps:
       - name: Prepare configuration
