perf: 更新任务模板

--- a/.github/workflows/buildpack-deps.yml
+++ b/.github/workflows/buildpack-deps.yml
@@ -9,6 +9,7 @@ jobs:
   buildpack-deps:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         name: [buildpack-deps]
         os: [debian]
