feat: 固定 snapshot 源

--- a/buildpack-deps/debian/trixie/curl/Dockerfile
+++ b/buildpack-deps/debian/trixie/curl/Dockerfile
@@ -6,6 +6,15 @@
 
 FROM ghcr.io/loong64/debian:trixie
 
+RUN echo "deb http://snapshot.debian.org/archive/debian-ports/20250801T194242Z/ sid main" > /etc/apt/sources.list && \
+    ( echo 'quiet "true";'; \
+      echo 'APT::Get::Assume-Yes "true";'; \
+      echo 'APT::Install-Recommends "false";'; \
+      echo 'Acquire::Check-Valid-Until "false";'; \
+      echo 'Acquire::Retries "5";'; \
+    ) > /etc/apt/apt.conf.d/99cpython-portable && \
+    rm -f /etc/apt/sources.list.d/*
+
 RUN set -eux; \
 	apt-get update; \
 	apt-get install -y --no-install-recommends \
