build(nginx): 更新 nginx 1.29
Signed-off-by: 吴小白 <296015668@qq.com>

--- a/nginx/Dockerfile-alpine-perl.template
+++ b/nginx/Dockerfile-alpine-perl.template
@@ -51,6 +51,7 @@ RUN set -x \
                 " \
             && cp ${tempDir}/.abuild/abuild-key.rsa.pub /etc/apk/keys/ \
             && apk del --no-network .build-deps \
+            && if [ "$apkArch" = "armhf" ]; then nginxPackages="$( echo $nginxPackages | sed -E 's,nginx-module-acme=[^ ]+,,')"; fi \
             && apk add -X ${tempDir}/packages/alpine/ --no-cache $nginxPackages \
             ;; \
     esac \
