--- a/nginx/Dockerfile-alpine.template
+++ b/nginx/Dockerfile-alpine.template
@@ -1,5 +1,9 @@
 FROM ghcr.io/loong64/nginx:%%NGINX_VERSION%%-alpine-slim
 
+ENV NJS_VERSION   %%NJS_VERSION%%
+ENV NJS_RELEASE   %%NJS_RELEASE%%
+ENV ACME_VERSION  %%ACME_VERSION%%
+
 RUN set -x \
     && apkArch="$(cat /etc/apk/arch)" \
     && nginxPackages="%%PACKAGES%%
@@ -34,6 +38,8 @@ RUN set -x \
                 alpine-sdk \
                 findutils \
                 curl \
+                cargo \
+                clang-libclang \
             && su nobody -s /bin/sh -c " \
                 export HOME=${tempDir} \
                 && cd ${tempDir} \
@@ -48,12 +54,15 @@ RUN set -x \
                 && tar xzvf %%REVISION%%.tar.gz \
                 && cd pkg-oss-%%REVISION%% \
                 && cd alpine \
-                && make %%BUILDTARGET%% \
+                && export BUILDTARGET=\"%%BUILDTARGET%%\" \
+                && if [ \"\$(apk --print-arch)\" = \"armhf\" ]; then BUILDTARGET=\"\$( echo \$BUILDTARGET | sed 's,module-acme,,' )\"; fi \
+                && make \$BUILDTARGET \
                 && apk index --allow-untrusted -o ${tempDir}/packages/alpine/${apkArch}/APKINDEX.tar.gz ${tempDir}/packages/alpine/${apkArch}/*.apk \
                 && abuild-sign -k ${tempDir}/.abuild/abuild-key.rsa ${tempDir}/packages/alpine/${apkArch}/APKINDEX.tar.gz \
                 " \
             && cp ${tempDir}/.abuild/abuild-key.rsa.pub /etc/apk/keys/ \
             && apk del --no-network .build-deps \
+            && if [ "$apkArch" = "armhf" ]; then nginxPackages="$( echo $nginxPackages | sed 's,nginx-module-acme=.*,,')"; fi \
             && apk add -X ${tempDir}/packages/alpine/ --no-cache $nginxPackages \
             ;; \
     esac \
