--- a/nginx/mainline/debian/Dockerfile
+++ b/nginx/mainline/debian/Dockerfile
@@ -7,7 +7,10 @@ FROM ghcr.io/loong64/debian:trixie-slim
 
 LABEL maintainer="NGINX Docker Maintainers <docker-maint@nginx.com>"
 
-ENV NGINX_VERSION   1.29.4
+ENV NGINX_VERSION   1.29.5
+ENV NJS_VERSION     0.9.5
+ENV NJS_RELEASE     1~trixie
+ENV ACME_VERSION    0.3.1
 ENV PKG_RELEASE     1~trixie
 ENV DYNPKG_RELEASE  1~trixie
 
@@ -41,7 +44,8 @@ RUN set -x \
         nginx-module-xslt=${NGINX_VERSION}-${DYNPKG_RELEASE} \
         nginx-module-geoip=${NGINX_VERSION}-${DYNPKG_RELEASE} \
         nginx-module-image-filter=${NGINX_VERSION}-${DYNPKG_RELEASE} \
-
+        nginx-module-njs=${NGINX_VERSION}+${NJS_VERSION}-${NJS_RELEASE} \
+        nginx-module-acme=${NGINX_VERSION}+${ACME_VERSION}-${PKG_RELEASE} \
     " \
     && case "$dpkgArch" in \
         amd64|arm64) \
@@ -63,6 +67,7 @@ RUN set -x \
 # build .deb files from upstream's packaging sources
             && apt-get update \
             && apt-get install --no-install-recommends --no-install-suggests -y \
+                cargo \
                 curl \
                 devscripts \
                 equivs \
@@ -72,10 +77,11 @@ RUN set -x \
                 xsltproc \
             && ( \
                 cd "$tempDir" \
+                && export CARGO_HOME="$tempDir/.cargo" \
                 && REVISION="${NGINX_VERSION}-${PKG_RELEASE}" \
                 && REVISION=${REVISION%~*} \
                 && curl -f -L -O https://github.com/nginx/pkg-oss/archive/${REVISION}.tar.gz \
-                && PKGOSSCHECKSUM="e8b08060e10b8d8819e03533cb4922992ea138bcbf16a89a90593db719f17d78afa1cc4785592260c9c897753ec28c8b0d02c01df4b7d0e0ed286d0a42cef68c *${REVISION}.tar.gz" \
+                && PKGOSSCHECKSUM="b8584eaa97130ba7743dfbb2a10f665d64cb54b864e2038d0fd298d24682fc05eb4472738430b15862dabc6f374917f1b9889117051a852d36d0a6c8bc898921 *${REVISION}.tar.gz" \
                 && if [ "$(openssl sha512 -r ${REVISION}.tar.gz)" = "$PKGOSSCHECKSUM" ]; then \
                     echo "pkg-oss tarball checksum verification succeeded!"; \
                 else \
@@ -85,12 +91,12 @@ RUN set -x \
                 && tar xzvf ${REVISION}.tar.gz \
                 && cd pkg-oss-${REVISION} \
                 && cd debian \
-                && for target in base module-geoip module-image-filter module-xslt; do \
+                && for target in base module-geoip module-image-filter module-njs module-xslt module-acme; do \
                     make rules-$target; \
                     mk-build-deps --install --tool="apt-get -o Debug::pkgProblemResolver=yes --no-install-recommends --yes" \
                         debuild-$target/nginx-$NGINX_VERSION/debian/control; \
                 done \
-                && make base module-geoip module-image-filter module-xslt \
+                && make base module-geoip module-image-filter module-njs module-xslt module-acme \
             ) \
 # we don't remove APT lists here because they get re-downloaded and removed later
             \
